--- a/public/index.html
+++ b/public/index.html
@@ -242,8 +242,7 @@
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
-                    model: 'openai/gpt-4o',
-                    max_tokens: 500,
+                    model: 'google/gemini-2.0-flash-exp:free',
                     messages: [
                         { role: 'user', content: prompt }
                     ]
