--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
-                    model: 'openai/gpt-4o',
+                    model: 'google/gemini-2.0-flash-exp:free',
                     max_tokens: 500,
                     messages: [
                         { role: 'user', content: prompt }
