--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
-                    model: 'google/gemini-2.0-flash-exp:free',
+                    model: 'deepseek/deepseek-chat-v3-0324:free',
                     max_tokens: 500,
                     messages: [
                         { role: 'user', content: prompt }
